[gd_scene format=3 uid="uid://bj6yss6l653qa"]

[ext_resource type="Texture2D" uid="uid://bra3hwb1lnjvu" path="res://images/vignette.png" id="1_3rkf3"]
[ext_resource type="Script" uid="uid://b1flga8wtbld1" path="res://scripts/menu/menu.gd" id="1_247la"]
[ext_resource type="Theme" uid="uid://bvyertuunhye7" path="res://themes/main_menu.tres" id="2_247la"]
[ext_resource type="Texture2D" uid="uid://bafym8lcd76yg" path="res://themes/gradients/main_menu.tres" id="2_hj162"]
[ext_resource type="Texture2D" uid="uid://c06aaa8dtbgcr" path="res://themes/gradients/credits.tres" id="4_xn6kt"]
[ext_resource type="Texture2D" uid="uid://chgl7eowug3ag" path="res://themes/gradients/custom_maps.tres" id="5_1k4da"]
[ext_resource type="Texture2D" uid="uid://cxwe3fpgrfn6q" path="res://themes/gradients/main_maps.tres" id="5_bbqo6"]
[ext_resource type="Texture2D" uid="uid://c30t2wy8qd6xi" path="res://images/difficulties/medium.png" id="6_bbqo6"]
[ext_resource type="Texture2D" uid="uid://ka42k2j8a0ug" path="res://themes/gradients/settings.tres" id="6_xn6kt"]
[ext_resource type="Texture2D" uid="uid://r8sxn1yp2etk" path="res://images/difficulties/unknown.png" id="7_d4hu8"]
[ext_resource type="Texture2D" uid="uid://bs2tavlqjv86f" path="res://images/difficulties/hard.png" id="7_p1nwe"]
[ext_resource type="Texture2D" uid="uid://dg25ddk3nfee7" path="res://images/difficulties/legendary.png" id="8_prbor"]

[node name="menu" type="Control" unique_id=681409378]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_247la")

[node name="main_menu" type="TextureRect" parent="." unique_id=70350032]
z_index = -99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_hj162")

[node name="vbox" type="VBoxContainer" parent="main_menu" unique_id=2071970611]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -712.0
offset_top = -415.0
offset_right = 672.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("2_247la")
alignment = 1

[node name="title" type="Label" parent="main_menu/vbox" unique_id=253568751]
z_index = 2
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.73333335, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.16899684, 0.40683764, 0.27268642, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 250
text = "Breeze Trials"
horizontal_alignment = 1

[node name="version" type="Label" parent="main_menu/vbox" unique_id=1297986335]
z_index = 2
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.73333335, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.16899684, 0.40683764, 0.27268642, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 75
text = "v0.1 WIP"
horizontal_alignment = 1

[node name="main_maps" type="Button" parent="main_menu/vbox" unique_id=71921992]
z_index = 2
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
disabled = true
text = "Main Maps"

[node name="custom_maps" type="Button" parent="main_menu/vbox" unique_id=7770294]
z_index = 2
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Custom Maps"

[node name="settings" type="Button" parent="main_menu/vbox" unique_id=92460817]
z_index = 2
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Settings"

[node name="credits" type="Button" parent="main_menu/vbox" unique_id=1807586510]
z_index = 2
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Credits"

[node name="quit" type="Button" parent="main_menu/vbox" unique_id=1989005677]
z_index = 2
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Quit"

[node name="maps" type="TextureRect" parent="." unique_id=476587427]
visible = false
z_index = -99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("5_bbqo6")

[node name="vbox" type="VBoxContainer" parent="maps" unique_id=1370541722]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -744.0
offset_right = 744.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("2_247la")
alignment = 1

[node name="title" type="Label" parent="maps/vbox" unique_id=1650658268]
z_index = 2
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 0
theme_override_colors/font_color = Color(0.73333335, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.16899684, 0.40683764, 0.27268642, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 250
text = "Main maps"
horizontal_alignment = 1

[node name="list" type="ItemList" parent="maps/vbox" unique_id=995269782]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 55
auto_height = true
item_count = 4
icon_scale = 0.3
item_0/text = "Very"
item_0/icon = ExtResource("6_bbqo6")
item_1/text = "Cool"
item_1/icon = ExtResource("7_p1nwe")
item_2/text = "Maps"
item_2/icon = ExtResource("8_prbor")
item_3/text = "Test Scene (clickable)"
item_3/icon = ExtResource("7_d4hu8")

[node name="back" type="Button" parent="maps/vbox" unique_id=191135961]
z_index = 5
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Back"

[node name="custom" type="TextureRect" parent="." unique_id=1593867107]
visible = false
z_index = -99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("5_1k4da")

[node name="vbox" type="VBoxContainer" parent="custom" unique_id=1908760605]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -744.0
offset_right = 744.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("2_247la")
alignment = 1

[node name="title" type="Label" parent="custom/vbox" unique_id=753691692]
z_index = 2
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 0
theme_override_colors/font_color = Color(0.73333335, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.16899684, 0.40683764, 0.27268642, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 250
text = "Custom Maps"
horizontal_alignment = 1

[node name="list" type="ItemList" parent="custom/vbox" unique_id=248733751]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 55
auto_height = true
item_count = 3
icon_scale = 0.3
item_0/text = "Play Map"
item_0/icon = ExtResource("7_d4hu8")
item_1/text = "Edit Map"
item_1/icon = ExtResource("7_d4hu8")
item_2/text = "New Map"
item_2/icon = ExtResource("7_d4hu8")

[node name="back" type="Button" parent="custom/vbox" unique_id=261656604]
z_index = 5
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Back"

[node name="notice" type="Label" parent="custom/vbox" unique_id=444297547]
z_index = 2
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.73333335, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.16899684, 0.40683764, 0.27268642, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "By sharing your maps, you are responsible for making
sure you have permission to use your music of choice."
horizontal_alignment = 1

[node name="files" type="FileDialog" parent="custom" unique_id=3056271]
oversampling_override = 1.0
mode = 2
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(1920, 1080)
min_size = Vector2i(1920, 1080)
ok_button_text = "Load"
file_mode = 0
access = 2
filters = PackedStringArray("*.tscn")
hidden_files_toggle_enabled = false
file_filter_toggle_enabled = false

[node name="credits" type="TextureRect" parent="." unique_id=590577484]
visible = false
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("4_xn6kt")

[node name="vbox" type="VBoxContainer" parent="credits" unique_id=428279587]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -681.0
offset_top = -437.0
offset_right = 681.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
theme = ExtResource("2_247la")
alignment = 1

[node name="title" type="Label" parent="credits/vbox" unique_id=1885492094]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.9917378, 0.42157233, 1, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.6175447, 2.6183128e-05, 0.46413237, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 250
text = "Credits"
horizontal_alignment = 1

[node name="text_1" type="Label" parent="credits/vbox" unique_id=296173971]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.96368617, 0.9494793, 0.8079109, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.46944386, 0.31538966, 0.14666304, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 100
text = "Assets"
horizontal_alignment = 1

[node name="text_2" type="Label" parent="credits/vbox" unique_id=222322879]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.96368617, 0.9494793, 0.8079109, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.46944386, 0.31538966, 0.14666304, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "OpenGameArt.org
"
horizontal_alignment = 1

[node name="text_3" type="Label" parent="credits/vbox" unique_id=1950666818]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.96368617, 0.9494793, 0.8079109, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.46944386, 0.31538966, 0.14666304, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 100
text = "Tools"
horizontal_alignment = 1

[node name="text_4" type="Label" parent="credits/vbox" unique_id=1487787499]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.96368617, 0.9494793, 0.8079109, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.46944386, 0.31538966, 0.14666304, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Game Engine: Godot Engine (v4.5)
3D-Modeling: Blender
2D Assets and Drawing: Krita
Artificial Intellegence: DeepSeek (Coding help & refactoring)"
horizontal_alignment = 1

[node name="back" type="Button" parent="credits" unique_id=1407752272]
z_index = 5
z_as_relative = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -681.0
offset_top = -138.0
offset_right = 681.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Back"

[node name="settings" type="TextureRect" parent="." unique_id=2102410986]
visible = false
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("6_xn6kt")

[node name="vbox" type="VBoxContainer" parent="settings" unique_id=1790245783]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -448.0
offset_right = 448.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("2_247la")
alignment = 1

[node name="title" type="Label" parent="settings/vbox" unique_id=33270713]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.9946844, 0.6768414, 0.5794238, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.67829865, 0.3635711, 0.3214071, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 250
text = "Settings"
horizontal_alignment = 1

[node name="sens" type="Label" parent="settings/vbox" unique_id=394518823]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.99668926, 0.7210396, 0.63583964, 1)
theme_override_colors/font_shadow_color = Color(0.19607843, 0.19607843, 0.19607843, 0.58431375)
theme_override_colors/font_outline_color = Color(0.67829865, 0.3635711, 0.3214071, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 50
text = "Sensitivity"
horizontal_alignment = 1

[node name="sens_box" type="LineEdit" parent="settings/vbox" unique_id=1389611533]
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "Default: 0.1"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_type = 3
secret_character = ""

[node name="CheckBox" type="CheckBox" parent="settings/vbox" unique_id=997255344]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 50
text = "V-Sync"

[node name="back" type="Button" parent="settings/vbox" unique_id=1302974468]
z_index = 5
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_247la")
theme_override_colors/font_color = Color(0.59285295, 0.8405803, 0.7143255, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Back"

[node name="vignette" type="TextureRect" parent="." unique_id=2044094381]
modulate = Color(0, 0, 0, 0.5882353)
z_index = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("1_3rkf3")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="main_menu/vbox/main_maps" to="." method="_main_maps"]
[connection signal="pressed" from="main_menu/vbox/custom_maps" to="." method="_main_custom"]
[connection signal="pressed" from="main_menu/vbox/settings" to="." method="_main_settings"]
[connection signal="pressed" from="main_menu/vbox/credits" to="." method="_main_credits"]
[connection signal="pressed" from="main_menu/vbox/quit" to="." method="_main_quit"]
[connection signal="item_clicked" from="maps/vbox/list" to="." method="_main_maps_list_click"]
[connection signal="pressed" from="maps/vbox/back" to="." method="_maps_main"]
[connection signal="item_clicked" from="custom/vbox/list" to="." method="_on_custom_maps_list_item_clicked"]
[connection signal="pressed" from="custom/vbox/back" to="." method="_cm_main"]
[connection signal="file_selected" from="custom/files" to="." method="_on_files_file_selected"]
[connection signal="pressed" from="credits/back" to="." method="_credits_exit"]
[connection signal="pressed" from="settings/vbox/back" to="." method="_settings_exit"]
